# graphql-benchmark

./: Cargo.toml  README.md
benches/: benches.rs  tes.graphql
