[package]
name = "graphql-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-parser = "0.4.0"
async-graphql-parser = "4.0.13"
apollo-parser = "0.3"
apollo-parser-02 = { package = "apollo-parser", git = "https://github.com/allancalix/apollo-rs", rev = "186e21c7b51a37d2f8231affcc7d116186873927" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false
